--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,20 +13,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          node-version: '20' 
 
-      - name: Build with Maven # Change this if you use Gradle
-        run: mvn clean package # Use './gradlew build' for Gradle projects
+      
+      - name: Install dependencies
+        run: npm install
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Log in to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
